<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="240dp"
        android:layout_height="160dp"
        android:layout_marginTop="21dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <com.yjtse.lamp.widgets.ClearEditText
        android:id="@+id/et_login_input_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_login_logo"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/input_bg"
        android:drawableRight="@drawable/et_delete_right"
        android:hint="@string/inputUsernameStr"
        android:inputType="number"
        android:maxLength="20"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="#bfc0c1" />

    <com.yjtse.lamp.widgets.ClearEditText
        android:id="@+id/et_login_input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_login_input_number"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableRight="@drawable/et_delete_right"
        android:ems="20"
        android:hint="@string/inputPasswordStr"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="#bfc0c1" />

    <CheckBox
        android:id="@+id/remenber_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_login_input_password"
        android:layout_below="@id/et_login_input_password"
        android:button="@drawable/check_state"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/rememberPasswordStr"
        android:textColor="#bfc0c1" />

    <com.andexert.library.RippleView
        android:id="@+id/remote_login_ripple"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/remenber_password"
        rv_centered="true">
    <Button
        android:id="@+id/btn_remote_login"
        style="@style/Ripple_Button_BG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remoteLoginBtnStr" />
    </com.andexert.library.RippleView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/remote_login_ripple"
        android:layout_alignRight="@id/remote_login_ripple"
        android:layout_below="@id/remote_login_ripple"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#bfc0c1" />

        <TextView
            android:id="@+id/tv_forget_password"
            style="@style/test_login_fun_style"
            android:gravity="center"
            android:text="@string/forgetPasswordStr" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#bfc0c1" />

        <TextView
            android:id="@+id/tv_regist_account"
            style="@style/test_login_fun_style"
            android:gravity="center"
            android:text="@string/registAccount" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#bfc0c1" />

    </LinearLayout>

    <TextView
        android:id="@+id/hint_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/et_login_input_number"
        android:layout_alignLeft="@id/et_login_input_number"
        android:layout_marginTop="7dip"
        android:text="@string/hintNothing"
        android:textColor="#ff0000"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_version_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="当前版本: v"
            android:textColor="#bfc0c1" />


        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tv_version_str"
            android:layout_toRightOf="@id/tv_version_str"
            android:clickable="true"
            android:gravity="center"
            android:text="1.0"
            android:textColor="#bfc0c1" />
    </LinearLayout>

</RelativeLayout>