<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hint_forget_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/tv_function_not_finish"
        android:textColor="#ff0000"
        android:textSize="34sp" />

    <com.yjtse.lamp.widgets.ClearEditText
        android:id="@+id/et_forget_input_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint_forget_string"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/input_bg"
        android:drawableRight="@android:drawable/ic_delete"
        android:hint="@string/inputUsernameStr"
        android:inputType="number"
        android:maxLength="11"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="#bfc0c1" />
    <com.yjtse.lamp.widgets.ClearEditText
        android:id="@+id/et_forget_input_identifying_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_forget_input_number"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="140dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/input_bg"
        android:drawableRight="@drawable/et_delete_right"
        android:ems="20"
        android:hint="@string/registInputIndentifyCode"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="#bfc0c1" />

    <TextView
        android:id="@+id/tv_forget_get_identifying_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/et_forget_input_identifying_code"
        android:layout_alignRight="@id/et_forget_input_number"
        android:layout_alignTop="@id/et_forget_input_identifying_code"
        android:layout_toLeftOf="@id/et_forget_input_identifying_code"
        android:background="@drawable/verify_btn_corners"
        android:clickable="true"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/getIdentifyingCode"
        android:textColor="#ff8d8e8e"
        android:textSize="16sp" />

    <com.andexert.library.RippleView
        android:id="@+id/control_ripple"
        rv_centered="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_forget_get_identifying_code"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/btn_forget_confirm"
            style="@style/Ripple_Button_BG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:clickable="false"
            android:text="@string/nextStep" />
    </com.andexert.library.RippleView>

</RelativeLayout>
