<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.yjtse.lamp.widgets.ClearEditText
        android:id="@+id/et_new_password_input_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/input_bg"
        android:drawableRight="@android:drawable/ic_delete"
        android:ems="20"
        android:hint="@string/inputNewPassword"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="#bfc0c1" />

    <com.yjtse.lamp.widgets.ClearEditText
        android:id="@+id/et_new_password_input_number_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_new_password_input_number"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_bg"
        android:drawableRight="@android:drawable/ic_delete"
        android:ems="20"
        android:hint="@string/inputConfirmPassword"
        android:inputType="textPassword"
        android:paddingLeft="15dp"
        android:singleLine="true"
        android:textColorHint="#bfc0c1" />

    <com.andexert.library.RippleView
        android:id="@+id/replace_password_ripple"
        rv_centered="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_new_password_input_number_confirm"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="23dp">

        <Button
            android:id="@+id/btn_new_password_confirm"
            style="@style/Ripple_Button_BG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comfirmBtnStr" />
    </com.andexert.library.RippleView>

</RelativeLayout>
